// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. lead one full width slice 1`] = `
<View>
  <View>
    <View
      style={
        Object {
          "marginBottom": 0,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "#1D1D1B",
            "fontFamily": "GillSansMTStd-Medium",
            "fontSize": 12,
            "fontWeight": "400",
            "letterSpacing": 1.2,
            "lineHeight": 14,
            "marginBottom": 0,
          }
        }
      >
        ROYALS
      </Text>
    </View>
    <ArticleFlags />
    <Text
      style={
        Object {
          "color": "#333333",
          "fontFamily": "TimesModern-Bold",
          "fontSize": 22,
          "fontWeight": "900",
          "lineHeight": 25,
          "marginBottom": 5,
        }
      }
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </Text>
  </View>
  <View
    style={
      Object {
        "backgroundColor": "blue",
        "marginBottom": 10,
        "width": "100%",
      }
    }
  >
    <Image />
  </View>
</View>
`;

exports[`2. lead one and one slice 1`] = `
<View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1D1D1B",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              ROYALS
            </Text>
          </View>
          <ArticleFlags />
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 25,
                "marginBottom": 5,
              }
            }
          >
            Prince Philip ‘could be prosecuted’ over car crash
          </Text>
        </View>
        <View
          style={
            Object {
              "backgroundColor": "blue",
              "marginBottom": 10,
              "width": "100%",
            }
          }
        >
          <Image />
        </View>
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#DBDBDB",
        "borderBottomWidth": 1,
        "borderStyle": "solid",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "width": "100%",
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#1D1D1B",
                  "fontFamily": "GillSansMTStd-Medium",
                  "fontSize": 12,
                  "fontWeight": "400",
                  "letterSpacing": 1.2,
                  "lineHeight": 14,
                  "marginBottom": 0,
                }
              }
            >
              CYBER CRIME
            </Text>
          </View>
          <ArticleFlags />
          <Text
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 22,
                "fontWeight": "900",
                "lineHeight": 25,
                "marginBottom": 5,
              }
            }
          >
            GCHQ gives girls free cyber-classes to tackle gender gap
          </Text>
        </View>
        <Text
          style={
            Object {
              "color": "#696969",
              "flexWrap": "wrap",
              "fontFamily": "TimesDigitalW04",
              "fontSize": 14,
              "lineHeight": 20,
              "marginBottom": 10,
            }
          }
        >
          <Text>
            
            GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
          </Text>
          <Text>
             
            The intelligence
            ...
          </Text>
        </Text>
      </View>
    </View>
  </View>
</View>
`;
